# geofun

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  README.rst  build.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
src/: Makefile  geofun.cpp  geofun2.cpp
src/geofun/: bindings.cpp
src/pygeofun/: __init__.py  _version.py
tests/: conftest.py  test_geofun.py  test_geofun2.py  test_with_venvs.sh
tests/geofun/: test_geofun.py
