[tool.poetry]
name = "pygeofun"
version = "0.0.5"
description = "Geographic Functions: geodesics and rhumblines, orthodromes and loxodromes"
authors = [
  "Jaap Versteegh <j.r.versteegh@gmail.com>",
]
packages = [
  { include = "pygeofun", from = "src" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
readme = "README.md"
homepage = "https://github.com/jrversteegh/geofun"
repository = "https://github.com/jrversteegh/geofun"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.poetry.group.dev.dependencies]
ipython = "^7.34.0"
invoke = "^1.7.1"
pytest = "^7.1.2"
pybind11 = "^2.10.0"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
geographiclib = "^2.0"
numpy = "^1.23.3"
cmake = "^3.24.1.1"
wheel = "^0.37.1"
setuptools = "^65.4.1"
tomli = "^2.0.1"

[tool.poetry.build]
script = "build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(levelname)s - %(filename)s:%(lineno)s - %(name)s - %(message)s"

[build-system]
requires = ["cmake", "tomli",  "setuptools", "wheel", "pybind11", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
