[metadata]
name = geofun2
version = 0.0.1
author = Jaap Versteegh
author_email = j.r.versteegh@orca-st.com
url = https://github.com/jrversteegh/geofun2

[options]
packages = find:
python_required = >= 3.7
zip_safe = False
include_package_data = True
platforms = any
install_requires =

[options.entry_points]
console_scripts =

[flake8]
# E303: Too many blank lines is ok with me
# F401, F403 Ignore unused and * imports in __init__.py
# F405: May be undefined. Pity, because nice, but want star imports
# E402: Module level import not at top of file 
ignore = E303, F405, F401 __init__.py, F403 __init__.py, E402 conftest.py
# Default of 80 somewhat pedantic
max-line-length = 96
